@@ -428,7 +428,7 @@ def get_metadata(realizations, kind):
     return metadata
 
 
-@deprecated('Use the CSV exported instead')
+@deprecated('Use the CSV exporter instead')
 @export.add(('uhs', 'xml'))
 def export_uhs_xml(ekey, dstore):
     oq = dstore['oqparam']
@@ -465,7 +465,7 @@ HazardCurve = collections.namedtuple('HazardCurve', 'location poes')
 HazardMap = collections.namedtuple('HazardMap', 'lon lat iml')
 
 
-@deprecated('Use the CSV exported instead')
+@deprecated('Use the CSV exporter instead')
 @export.add(('hcurves', 'xml'))
 def export_hcurves_xml(ekey, dstore):
     key, kind, fmt = get_kkf(ekey)
@@ -503,7 +503,7 @@ def export_hcurves_xml(ekey, dstore):
     return sorted(fnames)
 
 
-@deprecated('Use the CSV exported instead')
+@deprecated('Use the CSV exporter instead')
 @export.add(('hmaps', 'xml'))
 def export_hmaps_xml(ekey, dstore):
     key, kind, fmt = get_kkf(ekey)
@@ -556,7 +556,7 @@ def export_hazard_npz(ekey, dstore):
     return [fname]
 
 
-@deprecated('Use the CSV exported instead')
+@deprecated('Use the CSV exporter instead')
 @export.add(('gmf_data', 'xml'))
 def export_gmf(ekey, dstore):
     """
